fixed navbar desktop dropdown z-index

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -70,8 +70,8 @@ body, button, input {
 }
 
 .fade-enter-active, .fade-leave-active {
-  transition: opacity .3s;
+  transition: opacity .3s !important;
 }
 .fade-enter, .fade-leave-to {
-  opacity: 0;
+  opacity: 0 !important;
 }
